Made font smaller for troubleshooting hints

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:theme="@style/ToolbarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -59,9 +59,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:paddingEnd="32dp"
-        android:paddingStart="32dp"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
+        android:paddingStart="32dp"
         android:text="@string/placeholder"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
