Added dialing timeout

--- a/app/src/main/res/xml/accessory_filter.xml
+++ b/app/src/main/res/xml/accessory_filter.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    <usb-accessory model="PnPi Server" manufacturer="Nick Lee of Hong Kong" />
+    <usb-accessory model="Plug n Pi Server" manufacturer="Nick Lee of Hong Kong" />
 </resources>
