--- a/app/src/main/res/layout/activity_hotspot.xml
+++ b/app/src/main/res/layout/activity_hotspot.xml
@@ -18,6 +18,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:titleTextColor="@android:color/white">
+
+        <ImageButton
+            android:id="@+id/Countries"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            app:srcCompat="@drawable/ic_flag_white"
+            tools:layout_editor_absoluteX="296dp"
+            tools:layout_editor_absoluteY="4dp" />
     </android.support.v7.widget.Toolbar>
 
     <ListView
